--- a/public/styles/layout.css
+++ b/public/styles/layout.css
@@ -18,8 +18,15 @@ body {
   margin: 0;
   color: #244751;
   background-color: #eee;
+  font-family: 'Roboto Condensed', sans-serif;
 }
 
+main {
+	width: 450px;
+	margin: 140px auto;
+	text-align: center;
+	background-color: white;
+}
 /*
  * Additional CSS can be defined below or in other CSS files, as per instructions
  */
