--- a/public/styles/nav.css
+++ b/public/styles/nav.css
@@ -1,4 +1,5 @@
 #nav-bar{
+    
     height:80px ;
     background-color:#00a087 ;
     color:#e8fdff ;
@@ -7,6 +8,7 @@
     padding-right: 2em; 
     position: fixed;
     top: 0;
+   
 }
 
 #nav-bar .logo{
@@ -23,3 +25,14 @@
     font-size:  200%;
     padding-left: 10px;
 }
+
+#nav-bar .composeToggle{
+    float: right;
+    margin:20px;
+    opacity: 0.7;
+}   
+
+#nav-bar .composeToggle:hover{
+    opacity: 1.0;
+}
+
