--- a/public/styles/layout.css
+++ b/public/styles/layout.css
@@ -1,8 +1,4 @@
-/*
- * http://www.paulirish.com/2012/box-sizing-border-box-ftw/
- * https://css-tricks.com/international-box-sizing-awareness-day/
- * Do not modify these two selectors, please
- */
+/*Styling for layout*/
 html {
   box-sizing: border-box;
 }
@@ -29,6 +25,4 @@ main.container {
 	background-color: white;
 	padding-top: 80px;
 }
-/*
- * Additional CSS can be defined below or in other CSS files, as per instructions
- */
+/
