--- a/public/styles/nav.css
+++ b/public/styles/nav.css
@@ -1,3 +1,4 @@
+/*Styling for Nav*/
 #nav-bar{
     
     height:80px ;
@@ -8,6 +9,7 @@
     padding-right: 2em; 
     position: fixed;
     top: 0;
+    z-index: 1;
    
 }
 
@@ -34,5 +36,8 @@
 
 #nav-bar .composeToggle:hover{
     opacity: 1.0;
+    box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.26);
+   
 }
+
 
